--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
       href="%PUBLIC_URL%/favicon.ico"
       type="image/x-icon"
     />
-    <title>Hnin Su Wai</title>
+    
+    <title>Hnin Su </title>
 
     <!-- Boxicon -->
     <link
